--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,8 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_REPO_NAME: "admin03-reservation"
-    _PROJECT_NAME: "reservation"
+    IMAGE_REPO_NAME: admin03-reservation
+    _PROJECT_NAME: reservation
 
 phases:
   install:
