--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ version: 0.2
 env:
   variables:
     IMAGE_REPO_NAME: admin03-reservation
-    _PROJECT_NAME: reservation
+    _PROJECT_NAME: admin03-reservation
 
 phases:
   install:
